Testimonials grid section

--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ main {
 .card__name {
   font-weight: 600;
 }
-.card__education, .card__description {
+.card__education,
+.card__description {
   opacity: 0.5;
 }
 .card__description {
@@ -55,7 +56,7 @@ main {
 
 .card-1 {
   background-color: hsl(263, 55%, 52%);
-  background-image: url(../assets/images/bg-pattern-quotation.svg);
+  background-image: url(./assets/images/bg-pattern-quotation.svg);
   background-repeat: no-repeat;
   background-position: 80% 0;
   color: hsl(0, 0%, 100%);
